--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">WebStudio</a>
+            <a href="./index.html" lang="en">WebStudio</a>
             <ul>
                 <li> 
                     <a href="">Студия</a>
@@ -30,77 +30,85 @@
             </li>
         </ul>
     </header>
-    
-    <section>
-        <h1>Эффективные решения <br> для вашего бизнеса</h1>
-        <button>Заказать услугу</button>
-    </section>
+    <main>
+        <!--Hero section-->
+        <section>
+            <h1>Эффективные решения <br> для вашего бизнеса</h1>
+            <button>Заказать услугу</button>
+        </section>
 
-    <section>
-        <h2>Преимущества</h2>
-        <ul>
-            <li>
-                <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-            </li>
-            <li>
-                <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-            </li>
-            <li>
-                <h3>Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-            </li>
-            <li>
-                <h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-            </li>
-        </ul>
-    </section>
-    <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-            <li>
-                <img src="./images/box 1.png" alt="набор текста" width="370">
-            </li>
-            <li>
-                <img src="./images/box 2.png" alt="Телефон в руках и экран" width="370">
-            </li>
-            <li>
-                <img src="./images/box 3.png" alt="Палитра с цветами" width="370">
-            </li>
-        </ul>
-    </section>
-    <section>
-        <h2>Наша команда</h2>
-        <ul>
-            <li>
-                <img src="./images/img.jpg" alt="портрет бородатого мужчины в очках" width="270">
-                <h3>Игорь Демьяненко</h3>
-                <p>Product Designer</p>
-            </li>
-            <li>
-                <img src="./images/img (1).jpg" alt="портрет светловолосой женщины в очках" width="270">
-                <h3>Ольга Репина</h3>
-                <p>Frontend Developer</p>
-            </li>
-            <li>
-                <img src="./images/img (2).jpg" alt="портрет улыбающегося мужчины в голубой рубашке" width="270">
-                <h3>Николай Тарасов</h3>
-                <p>Marketing</p>
-            </li>
-            <li>
-                <img src="./images/img (3).jpg" alt="портрет бородатого мужчины в очках" width="270">
-            </li>
-        </ul>
-    </section>
+        <!--Advantages section-->
+        <section>
+            <h2>Преимущества</h2>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+
+        <!--What we do section-->
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li>
+                    <img src="./images/box-1.png" alt="набор текста" width="370">
+                </li>
+                <li>
+                    <img src="./images/box-2.png" alt="Телефон в руках и экран" width="370">
+                </li>
+                <li>
+                    <img src="./images/box-3.png" alt="Палитра с цветами" width="370">
+                </li>
+            </ul>
+        </section>
+
+        <!--Our team section-->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/img.jpg" alt="портрет бородатого мужчины в очках" width="270">
+                    <h3>Игорь Демьяненко</h3>
+                    <p lang="en">Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/img-(1).jpg" alt="портрет светловолосой женщины в очках" width="270">
+                    <h3>Ольга Репина</h3>
+                    <p lang="en">Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/img-(2).jpg" alt="портрет улыбающегося мужчины в голубой рубашке" width="270">
+                    <h3>Николай Тарасов</h3>
+                    <p lang="en">Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/img-(3).jpg" alt="портрет бородатого мужчины в очках" width="270">
+                </li>
+            </ul>
+        </section>
+    </main>
+    
     <footer>
         <ul>
             <li>
-                <a href="./index.html">WebStudio</a>
+                <a href="./index.html" lang="en">WebStudio</a>
             </li>
             <li>
-                <address>г. Киев, пр-т Леси Украинки, 26</address>
+                <a href="https://goo.gl/maps/QC9Pbh4n8E9bidxp7">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
             <li> 
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
